# db-pool-rs

./: CLAUDE.md  Cargo.toml  PROJECT_COMPLETION.md  README.md  pyproject.toml  tech_solution.md  test_import.py
docs/: operations.md
docs/adr/: 001-rust-pyo3-technology-stack.md  002-distributed-pool-architecture.md  003-multi-deployment-modes.md  README.md
examples/python/: basic_usage.py  benchmark.py
python/db_pool_rs/: __init__.py  simple.py
scripts/: run_tests.sh  setup_full.sh  setup_simple.sh
src/: lib.rs
src/core/: config.rs  error.rs  mod.rs  pool_manager.rs  types.rs
src/databases/: factory.rs  mod.rs  traits.rs
src/databases/mssql/: config.rs  connection.rs  mod.rs  pool.rs  types.rs
src/python/: pool.rs
src/utils/: dataframe.rs  mod.rs  monitoring.rs
tests/: Cargo.toml  test_config.rs  test_monitoring.rs  test_pool_manager.rs  test_runner.rs  test_types.rs
tests/python/: test_simple_mode.py
