[package]
name = "db-pool-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_runner"
path = "tests/test_runner.rs"

[dependencies]
# 主要依赖保持不变
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
polars = { version = "0.36", features = ["lazy", "temporal", "strings"] }
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
config = "0.13"
toml = "0.8"
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
# 添加测试专用依赖
serial_test = "3.0"
pretty_assertions = "1.4"
mockall = "0.12"

[features]
test-utils = []